Added examples from chapter "Class Comparator"